--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 <version>3.6.1</version>
 </dependency>
 <dependency>
+    <groupId>io.grpc</groupId>
+    <artifactId>grpc-auth</artifactId>
+    <version>1.63.0</version>
+</dependency>
+<dependency>
 <groupId>com.google.guava</groupId>
 <artifactId>guava</artifactId>
 <version>28.2-jre</version>
@@ -43,6 +48,24 @@
     <groupId>org.jmdns</groupId>
     <artifactId>jmdns</artifactId>
     <version>3.5.7</version>
+</dependency>
+
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-api</artifactId>
+    <version>0.11.5</version>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-impl</artifactId>
+    <version>0.11.5</version>
+    <scope>runtime</scope>
+</dependency>
+<dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt-jackson</artifactId>
+    <version>0.11.5</version>
+    <scope>runtime</scope>
 </dependency>
 
 <!--   added this to resolve issue with javax.annotation not found  -->
